--- a/bokeh-basics.ipynb
+++ b/bokeh-basics.ipynb
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -455,14 +455,16 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from bokeh.plotting import figure\n",
     "from bokeh.io import output_file, show\n",
+    "from bokeh.plotting import figure\n",
+    "from bokeh.models import ColumnDataSource, HoverTool\n",
+    "\n",
     "import pandas\n",
     "\n",
     "df_qcom = pandas.read_csv('qcom.csv', parse_dates=['Date'])\n",
@@ -471,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +482,7 @@
        "1259"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +568,7 @@
        "2 2014-02-20  75.959999  76.199997  75.680000  75.949997  63.728931  7194200"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,30 +579,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "81.599998"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "f = figure(width=1200, x_axis_type=\"datetime\", x_axis_label='Date', #sizing_mode=\"scale_width\",\n",
-    "           height=500, y_axis_label='Closing Price ($)',\n",
-    "           title = 'QCOM Closing Price Over Time')\n",
-    "\n",
-    "f.vbar(x='Date', top='Close', width=1, source=df_qcom)\n",
-    "f.line(x='Date', y='Close', source=df_qcom)\n",
-    "\n",
-    "f.y_range.start = 0\n",
-    "f.xaxis.major_label_orientation = 1.2\n",
-    "\n",
-    "output_file(\"qcom.html\")\n",
-    "show(f)\n"
+    "df_qcom.max()['Close']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#used for tooltip values\n",
+    "cds = ColumnDataSource(df_qcom)\n",
+    "\n",
+    "f = figure(width=1200, x_axis_type=\"datetime\", x_axis_label='Date', #sizing_mode=\"scale_width\",\n",
+    "           height=500, y_axis_label='Closing Price ($)',\n",
+    "           title = 'QCOM Closing Price Over Time')\n",
+    "\n",
+    "f.line(x='Date', y='Close', line_width=1, line_color='grey', source=cds)\n",
+    "f.circle(x='Date', y='Close', size=3, color='blue', source=cds)\n",
+    "\n",
+    "#min-max bounding lines\n",
+    "f.line(x='Date', y=df_qcom.max()['Close'], line_width=1, line_color='green', source=cds)\n",
+    "f.line(x='Date', y=df_qcom.min()['Close'], line_width=1, line_color='red', source=cds)\n",
+    "\n",
+    "#f.line(x='Date', y='RelativeVol', source=cds)\n",
+    "#f.vbar(x='Date', top='RelativeVol', width=5, source=cds)\n",
+    "\n",
+    "#f.y_range.start = 0\n",
+    "f.xaxis.major_label_orientation = 1.2\n",
+    "f.xgrid.visible = False\n",
+    "f.ygrid.visible = True\n",
+    "\n",
+    "#tooltip info\n",
+    "mean_volume = int(df_qcom['Volume'].mean())\n",
+    "df_qcom['RelativeVol'] = 100 - (df_qcom['Volume'] - mean_volume) / mean_volume * 100\n",
+    "df_qcom['DateStr'] = df_qcom['Date'].dt.strftime('%Y-%m-%d')\n",
+    "\n",
+    "hoover = HoverTool(tooltips = [('Date','@DateStr'),\n",
+    "                               ('Close','$@Close'),\n",
+    "                               ('Range','$@Low - $@High'),\n",
+    "                               ('Volume','@Volume (@RelativeVol%)')])\n",
+    "f.add_tools(hoover)\n",
+    "\n",
+    "output_file(\"qcom.html\")\n",
+    "show(f)\n"
+   ]
   }
  ],
  "metadata": {
