--- a/bokeh-basics.ipynb
+++ b/bokeh-basics.ipynb
@@ -434,28 +434,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## time series QCOM stock data (.csv from Yahoo Finance)\n"
+    "## time series QCOM stock data\n",
+    "Note: Was previously downloading .csv from Yahoo and reading it into a dataframe.  Now using DataReader to simply retreive it directly from Yahoo. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Date         datetime64[ns]:dense\n",
-       "Open                float64:dense\n",
-       "High                float64:dense\n",
-       "Low                 float64:dense\n",
-       "Close               float64:dense\n",
-       "Adj Close           float64:dense\n",
-       "Volume                int64:dense\n",
+       "High         float64:dense\n",
+       "Low          float64:dense\n",
+       "Open         float64:dense\n",
+       "Close        float64:dense\n",
+       "Volume       float64:dense\n",
+       "Adj Close    float64:dense\n",
        "dtype: object"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,36 +464,52 @@
     "from bokeh.io import output_file, show\n",
     "from bokeh.plotting import figure\n",
     "from bokeh.models import ColumnDataSource, HoverTool\n",
-    "\n",
+    "from pandas_datareader import data\n",
     "import pandas\n",
+    "import datetime\n",
     "\n",
-    "df_qcom = pandas.read_csv('qcom.csv', parse_dates=['Date'])\n",
+    "start_dt = datetime.datetime(2015, 2, 11)\n",
+    "end_dt = datetime.datetime(2019, 2, 11)\n",
+    "\n",
+    "df_qcom = data.DataReader(name='QCOM', data_source='yahoo', start=start_dt, end=end_dt)\n",
+    "\n",
     "df_qcom.ftypes\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# date being used as index...move Date to a column and create an index column\n",
+    "df_qcom['Date'] = df_qcom.index\n",
+    "df_qcom.index = [i for i in range(0,len(df_qcom))]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1259"
+       "1008"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(df_qcom)"
+    "len(df_qcom)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -517,89 +533,74 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Open</th>\n",
        "      <th>High</th>\n",
        "      <th>Low</th>\n",
+       "      <th>Open</th>\n",
        "      <th>Close</th>\n",
-       "      <th>Adj Close</th>\n",
        "      <th>Volume</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>Date</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2014-02-18</td>\n",
-       "      <td>76.250000</td>\n",
-       "      <td>76.250000</td>\n",
-       "      <td>75.529999</td>\n",
-       "      <td>75.599998</td>\n",
-       "      <td>63.435242</td>\n",
-       "      <td>8850100</td>\n",
+       "      <td>70.949997</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>70.570000</td>\n",
+       "      <td>70.209999</td>\n",
+       "      <td>13439300.0</td>\n",
+       "      <td>60.177197</td>\n",
+       "      <td>2015-02-11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2014-02-19</td>\n",
-       "      <td>75.370003</td>\n",
-       "      <td>75.989998</td>\n",
-       "      <td>75.110001</td>\n",
-       "      <td>75.769997</td>\n",
-       "      <td>63.577892</td>\n",
-       "      <td>8527600</td>\n",
+       "      <td>70.389999</td>\n",
+       "      <td>69.559998</td>\n",
+       "      <td>69.580002</td>\n",
+       "      <td>70.389999</td>\n",
+       "      <td>12798300.0</td>\n",
+       "      <td>60.331467</td>\n",
+       "      <td>2015-02-12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2014-02-20</td>\n",
-       "      <td>75.959999</td>\n",
-       "      <td>76.199997</td>\n",
-       "      <td>75.680000</td>\n",
-       "      <td>75.949997</td>\n",
-       "      <td>63.728931</td>\n",
-       "      <td>7194200</td>\n",
+       "      <td>70.930000</td>\n",
+       "      <td>70.269997</td>\n",
+       "      <td>70.489998</td>\n",
+       "      <td>70.879997</td>\n",
+       "      <td>8050200.0</td>\n",
+       "      <td>60.751431</td>\n",
+       "      <td>2015-02-13</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Date       Open       High        Low      Close  Adj Close   Volume\n",
-       "0 2014-02-18  76.250000  76.250000  75.529999  75.599998  63.435242  8850100\n",
-       "1 2014-02-19  75.370003  75.989998  75.110001  75.769997  63.577892  8527600\n",
-       "2 2014-02-20  75.959999  76.199997  75.680000  75.949997  63.728931  7194200"
+       "        High        Low       Open      Close      Volume  Adj Close  \\\n",
+       "0  70.949997  70.000000  70.570000  70.209999  13439300.0  60.177197   \n",
+       "1  70.389999  69.559998  69.580002  70.389999  12798300.0  60.331467   \n",
+       "2  70.930000  70.269997  70.489998  70.879997   8050200.0  60.751431   \n",
+       "\n",
+       "        Date  \n",
+       "0 2015-02-11  \n",
+       "1 2015-02-12  \n",
+       "2 2015-02-13  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_qcom.head(3)"
+    "df_qcom.head(3)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "81.599998"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_qcom.max()['Close']\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,6 +611,11 @@
     "           height=500, y_axis_label='Closing Price ($)',\n",
     "           title = 'QCOM Closing Price Over Time')\n",
     "\n",
+    "#f.y_range.start = 0\n",
+    "f.xaxis.major_label_orientation = 1.2\n",
+    "f.xgrid.visible = False\n",
+    "f.ygrid.visible = True\n",
+    "\n",
     "f.line(x='Date', y='Close', line_width=1, line_color='grey', source=cds)\n",
     "f.circle(x='Date', y='Close', size=3, color='blue', source=cds)\n",
     "\n",
@@ -617,28 +623,26 @@
     "f.line(x='Date', y=df_qcom.max()['Close'], line_width=1, line_color='green', source=cds)\n",
     "f.line(x='Date', y=df_qcom.min()['Close'], line_width=1, line_color='red', source=cds)\n",
     "\n",
-    "#f.line(x='Date', y='RelativeVol', source=cds)\n",
-    "#f.vbar(x='Date', top='RelativeVol', width=5, source=cds)\n",
-    "\n",
-    "#f.y_range.start = 0\n",
-    "f.xaxis.major_label_orientation = 1.2\n",
-    "f.xgrid.visible = False\n",
-    "f.ygrid.visible = True\n",
-    "\n",
-    "#tooltip info\n",
-    "mean_volume = int(df_qcom['Volume'].mean())\n",
-    "df_qcom['RelativeVol'] = 100 - (df_qcom['Volume'] - mean_volume) / mean_volume * 100\n",
+    "#create a DateStr column formatted for display in tooltips\n",
     "df_qcom['DateStr'] = df_qcom['Date'].dt.strftime('%Y-%m-%d')\n",
     "\n",
+    "#tooltips\n",
     "hoover = HoverTool(tooltips = [('Date','@DateStr'),\n",
     "                               ('Close','$@Close'),\n",
     "                               ('Range','$@Low - $@High'),\n",
-    "                               ('Volume','@Volume (@RelativeVol%)')])\n",
+    "                               ('Volume','@Volume')])\n",
     "f.add_tools(hoover)\n",
     "\n",
     "output_file(\"qcom.html\")\n",
     "show(f)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
