options for csv or DataReader

--- a/bokeh-basics.ipynb
+++ b/bokeh-basics.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "42"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "2                         36.1  "
       ]
      },
-     "execution_count": 181,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
        "33102"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
        "2  2010     10    6    10          -24      9987"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,22 +440,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "High         float64:dense\n",
-       "Low          float64:dense\n",
-       "Open         float64:dense\n",
-       "Close        float64:dense\n",
-       "Volume       float64:dense\n",
-       "Adj Close    float64:dense\n",
+       "Date         datetime64[ns]:dense\n",
+       "Open                float64:dense\n",
+       "High                float64:dense\n",
+       "Low                 float64:dense\n",
+       "Close               float64:dense\n",
+       "Adj Close           float64:dense\n",
+       "Volume                int64:dense\n",
        "dtype: object"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,41 +465,84 @@
     "from bokeh.io import output_file, show\n",
     "from bokeh.plotting import figure\n",
     "from bokeh.models import ColumnDataSource, HoverTool\n",
-    "from pandas_datareader import data\n",
     "import pandas\n",
-    "import datetime\n",
+    "import datetime\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Option 1: read from qcom.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date         datetime64[ns]:dense\n",
+       "Open                float64:dense\n",
+       "High                float64:dense\n",
+       "Low                 float64:dense\n",
+       "Close               float64:dense\n",
+       "Adj Close           float64:dense\n",
+       "Volume                int64:dense\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_qcom = pandas.read_csv('qcom.csv', parse_dates=['Date'])\n",
+    "\n",
+    "df_qcom.ftypes\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Option 2: use DataReader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pandas_datareader import data\n",
     "\n",
     "start_dt = datetime.datetime(2015, 2, 11)\n",
     "end_dt = datetime.datetime(2019, 2, 11)\n",
-    "\n",
     "df_qcom = data.DataReader(name='QCOM', data_source='yahoo', start=start_dt, end=end_dt)\n",
+    "\n",
+    "#date being used as index...move Date to a column and create an index column\n",
+    "df_qcom['Date'] = df_qcom.index\n",
+    "df_qcom.index = [i for i in range(0,len(df_qcom))]\n",
     "\n",
     "df_qcom.ftypes\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# date being used as index...move Date to a column and create an index column\n",
-    "df_qcom['Date'] = df_qcom.index\n",
-    "df_qcom.index = [i for i in range(0,len(df_qcom))]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1008"
+       "1259"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -533,63 +577,58 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
        "      <th>High</th>\n",
        "      <th>Low</th>\n",
-       "      <th>Open</th>\n",
        "      <th>Close</th>\n",
-       "      <th>Volume</th>\n",
        "      <th>Adj Close</th>\n",
-       "      <th>Date</th>\n",
+       "      <th>Volume</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>70.949997</td>\n",
-       "      <td>70.000000</td>\n",
-       "      <td>70.570000</td>\n",
-       "      <td>70.209999</td>\n",
-       "      <td>13439300.0</td>\n",
-       "      <td>60.177197</td>\n",
-       "      <td>2015-02-11</td>\n",
+       "      <td>2014-02-18</td>\n",
+       "      <td>76.250000</td>\n",
+       "      <td>76.250000</td>\n",
+       "      <td>75.529999</td>\n",
+       "      <td>75.599998</td>\n",
+       "      <td>63.435242</td>\n",
+       "      <td>8850100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>70.389999</td>\n",
-       "      <td>69.559998</td>\n",
-       "      <td>69.580002</td>\n",
-       "      <td>70.389999</td>\n",
-       "      <td>12798300.0</td>\n",
-       "      <td>60.331467</td>\n",
-       "      <td>2015-02-12</td>\n",
+       "      <td>2014-02-19</td>\n",
+       "      <td>75.370003</td>\n",
+       "      <td>75.989998</td>\n",
+       "      <td>75.110001</td>\n",
+       "      <td>75.769997</td>\n",
+       "      <td>63.577892</td>\n",
+       "      <td>8527600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>70.930000</td>\n",
-       "      <td>70.269997</td>\n",
-       "      <td>70.489998</td>\n",
-       "      <td>70.879997</td>\n",
-       "      <td>8050200.0</td>\n",
-       "      <td>60.751431</td>\n",
-       "      <td>2015-02-13</td>\n",
+       "      <td>2014-02-20</td>\n",
+       "      <td>75.959999</td>\n",
+       "      <td>76.199997</td>\n",
+       "      <td>75.680000</td>\n",
+       "      <td>75.949997</td>\n",
+       "      <td>63.728931</td>\n",
+       "      <td>7194200</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        High        Low       Open      Close      Volume  Adj Close  \\\n",
-       "0  70.949997  70.000000  70.570000  70.209999  13439300.0  60.177197   \n",
-       "1  70.389999  69.559998  69.580002  70.389999  12798300.0  60.331467   \n",
-       "2  70.930000  70.269997  70.489998  70.879997   8050200.0  60.751431   \n",
-       "\n",
-       "        Date  \n",
-       "0 2015-02-11  \n",
-       "1 2015-02-12  \n",
-       "2 2015-02-13  "
+       "        Date       Open       High        Low      Close  Adj Close   Volume\n",
+       "0 2014-02-18  76.250000  76.250000  75.529999  75.599998  63.435242  8850100\n",
+       "1 2014-02-19  75.370003  75.989998  75.110001  75.769997  63.577892  8527600\n",
+       "2 2014-02-20  75.959999  76.199997  75.680000  75.949997  63.728931  7194200"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
